--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <hr>
 <h3>Summary: </h3>
 <p>This website will teach you more about me, my skills, experience, intelligence, and other stuff about me.</p>
-<h3><img src = "./pic.jpg" height="100" alt="Selfie"/></h3>
+<h3><img src = "./Pic.jpg" height="100" alt="Selfie"/></h3>
 <h3>Education:</h3>
 <p>I am currently in 8th grade of Strath Haven Middle School. I am in Enriched Language Arts and Accerated Math. Other classes I have include science, Spanish, social studies, and music.</p>
 <h3>Work Experience:</h3>
@@ -21,7 +21,7 @@
 
 <hr>
 <h3><a href = "./hobbies.html">Hobbies</a></h3>
-<h3><a href = "./Awards.html">Awards</a></h3>
+<h3><a href = "./awards.html">Awards</a></h3>
 <h3><a href = "./skills.html">Skills</a></h3>
 <hr>
 <h3><a href = "./4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/contact.html">Contact Me</a></h3>
